test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-source/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-source
  namespace: default
type: Opaque
