test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-source/trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-delete-source
