test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-source/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-source
  namespace: sync-delete-source
type: Opaque
